
* SOLR-16812: Support CBOR format for update/query (noble)

* SOLR-16855: Solr now provides a MigrateReplicas API at `POST /api/cluster/replicas/migrate` (v2), to move replicas
  off of a given set of nodes. This extends the functionality of the existing ReplaceNode API. (Houston Putman)

* SOLR-16717: {!join} can join collections with multiple shards on both sides. (Mikhail Khludnev)

Improvements
---------------------

* SOLR-16183: XML update allows <doc> <doc name="child"> ... </doc> </doc>.
  (Vinayak Hegde via Mikhail Khludnev)

* SOLR-16638: Fix Http2SolrClient's exception message when serverBaseUrl is null (Alex Deparvu via Kevin Risden)

* SOLR-16393: The path of the v2 "delete alias" API has been tweaked slightly to be more intuitive, and is now available at
  `DELETE /api/aliases/aliasName`. (Jason Gerlowski)

* SOLR-16393: Solr's v2 "aliasprop" CRUD APIs have been tweaked slightly to be more intuitive.  Alias property modification
  is now available at `PUT /api/aliases/aliasName/properties` (for bulk modification) and `PUT /api/aliases/aliasName/properties/propName`
  (for single property updates).  Additionally new APIs have been added for listing properties (`GET /api/aliases/aliasName/properties`),
  fetching single property values (`GET /api/aliases/aliasName/properties/propName`), and property deletion
  (`DELETE /api/aliases/aliasName/properties/propName`). (Alex Deparvu via Jason Gerlowski)

* SOLR-10466: Introduce Builder setter for defaultCollection on cloud SolrClients.  Deprecated
  direct setter setDefaultCollection on cloud SolrClients. (Eric Pugh, David Smiley)

* SOLR-16391: The path of the v2 "collprop" API has been tweaked slightly to be more intuitive.  Endpoints are now
  available under the `PUT` and `DELETE` verbs at `/api/collections/collName/properties/propName` depending on whether the property is
  being upserted or deleted. (Jason Gerlowski)
